[package]
name = "graviton_api"
version = "2.0.0"
authors = ["badconfig <array.clean@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
serde_json = "1.0"
uuid = {version = "0.8", features = ["serde", "v4"] }
diesel = {version = "1.4.4", features = ["postgres", "r2d2", "chrono","numeric","uuid","uuidv07"]}
bigdecimal = "0.1.0"
serde = {version = "1.0", features = ["derive"]}
chrono = { version = "0.4.10", features = ["serde"] }
actix_web_dev = { git = "https://github.com/Engine-studio/actix-web-dev-tools" }

hex-literal = "0.3.1"
actix-cors = "0.5.4"
