[package]
name = "pollers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

web3 = "0.17.0"
tokio = "1.0"
ethcontract = "0.14.0"
chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["bigdecimal","numeric","postgres", "r2d2", "chrono", "uuid","serde_json"] }
hex = "0.4.3"
serde = "1.0.126"
reqwest = { version = "0.11.4", features = ["json"]}
dotenv = "0.15.0"
serde_json = { version = "1.0.64"}
bigdecimal = "0.1.0"
diesel-derive-enum = { version = "1", features = ["postgres"] }
